# quantitative_rs

./: .gitignore  588800.SH.csv  Cargo.toml  README.md
calc/: Cargo.toml
calc/src/: lib.rs
convert_csv/: Cargo.toml
convert_csv/src/: lib.rs
csv_decode_to_struct/: Cargo.toml
csv_decode_to_struct/src/: main.rs
csv_decode_to_struct/src/dataframe/: dataframe.rs  dataframe_func.rs  mod.rs
csv_decode_to_struct/src/lib/: dataframe.rs
csv_read/: 588800.SH.csv  Cargo.toml
csv_read/src/: main.rs
discounted_cash_flow_rate/: Cargo.toml
discounted_cash_flow_rate/src/: main.rs
inject_db/: Cargo.toml
inject_db/src/: main.rs
src/: main.rs
with_polars/: Cargo.toml
with_polars/src/: main.rs
with_polars/src/calc/: mod.rs
with_polars/src/convert/: gbk_to_utf8.rs  mod.rs
with_polars_lazy/: Cargo.toml
with_polars_lazy/src/: lib.rs  main.rs
