[package]
name = "csv_decode_to_struct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "csv_decode_to_struct"
path = "src/main.rs"

[dependencies]
csv = "1.3.0"
encoding_rs = "0.8.33"
serde = {version = "*",features = ["derive"]}
serde_json = "*"
serde_with = "*"
rustfmt = "*"
