[package]
name = "csv_decode_to_struct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "csv_decode_to_struct"
path = "src/main.rs"

[dependencies]
encoding_rs = { workspace = true }
rustfmt = { workspace = true }
csv = "1.3.0"
serde = {version = "*",features = ["derive"]}
serde_json = "*"
serde_with = "*"
chrono = "0.4.31"
comfy-table = "*"