[package]
name = "csv_read"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "csv_read"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
encoding_rs = { workspace = true }
rustfmt = { workspace = true }
