[package]
name = "inject_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "inject_db"
path = "src/main.rs"

[dependencies]
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.34.0", features = ["full"] }
rustfmt = { workspace = true }
calc = { path = "../calc" }
convert_csv = { path = "../convert_csv" }
with_polars_lazy = { path = "../with_polars_lazy" }
polars = { version = "0.35.4", features = ["lazy", "strings", "lazy_regex"] }
