[package]
name = "with_polars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "with_polars"
path = "src/main.rs"

[dependencies]
encoding_rs = "0.8.33"
encoding_rs_io = "*"
rustfmt = "*"
polars = { version = "*" }
rand = "*"
color-eyre = "*"
chrono = "*"
tempfile="*"