[package]
name = "with_polars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "with_polars"
path = "src/main.rs"

[dependencies]
encoding_rs = { workspace = true }
rustfmt = { workspace = true }
polars = { version = "*", features = ["rolling_window", "round_series"] }
rand = "*"
color-eyre = "*"
chrono = "*"
tempfile="*"