[package]
name = "with_polars_lazy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "with_polars_lazy"
path = "src/main.rs"

[dependencies]
rustfmt = { workspace = true }
with_polars = { path = "../with_polars" }
polars = { version = "*", features = ["lazy", "rolling_window", "round_series"] }
