[package]
name = "with_polars_lazy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "with_polars_lazy"
path = "src/main.rs"

[dependencies]
rustfmt = { workspace = true }
calc = { path = "../calc" }
convert_csv = { path = "../convert_csv" }
polars = { version = "0.35.4", features = ["lazy", "strings", "lazy_regex"] }
